--- a/index.html
+++ b/index.html
@@ -10,42 +10,48 @@
   </head>
   <body>
     <header>
+      <div class="promo">
+        <video poster="images/bgcover.jpg" autoplay loop>
+          <source src="videos/bgvideo.mp4" type="video/mp4">
+        </video>
+        <div class="video-overlay"></div>
+        <div class="nameAndpos">
+          <h1>Shen Tianhao</h1>
+          <h2>Digital Designer & Video Editor</h2>
+        </div>
+      </div>
       <nav class="topnav">
-        <a href="#about" title="About">
-          <span>ABOUT</span>
+        <a href="#about">
+          <span class="navText">ABOUT</span>
           <span class="redLine">
             <div class="nav-btn-hidden"></div>
           </span>
         </a>
-        <a href="#education" title="Education">
+        <a href="#education">
           <span>EDUCATION</span>
           <span class="redLine">
             <div class="nav-btn-hidden"></div>
           </span>
         </a>
-        <a href="#experience" title="Experience">
+        <a href="#experience">
           <span>EXPERIENCE</span>
           <span class="redLine">
             <div class="nav-btn-hidden"></div>
           </span>
         </a>
-        <a href="#work" title="Work">
+        <a href="#work">
           <span>WORK</span>
           <span class="redLine">
             <div class="nav-btn-hidden"></div>
           </span>
         </a>
-        <a href="#contact" title="Contact">
+        <a href="#contact">
           <span>CONTACT</span>
           <span class="redLine">
             <div class="nav-btn-hidden"></div>
           </span>
         </a>
       </nav>
-      <div class="content-wrapper">
-        <h1>Shen Tianhao</h1>
-        <h2>Digital Designer & Video Editor</h2>
-      </div>
     </header>
     <main>
       <div id="about">
