--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=np">
     <link href="https://fonts.googleapis.com/css?family=Dosis|Libre+Franklin|Nanum+Gothic" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="navigation.js" defer></script>
