--- a/index.html
+++ b/index.html
@@ -2,92 +2,92 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=np">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Dosis|Libre+Franklin|Nanum+Gothic" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="navigation.js" defer></script>
     <title>Shen's online resume</title>
   </head>
   <body>
-    <header>
-      <div class="promo">
-        <video poster="images/bgcover.jpg" autoplay loop>
-          <source src="videos/bgvideo.mp4" type="video/mp4">
-        </video>
-        <div class="video-overlay"></div>
-        <div class="nameAndpos">
-          <h1>Shen Tianhao</h1>
-          <h2>Digital Designer & Video Editor</h2>
+    <div class="site-wrapper">
+      <header>
+        <div class="promo">
+          <video id="v1" poster="images/bgcover-2.jpg" autoplay loop>
+            <source src="videos/bgvideo-2.mp4" type="video/mp4">
+          </video>
+          <div class="nameAndpos">
+            <h1>Shen Tianhao</h1>
+            <h2>Digital Designer & Video Editor</h2>
+          </div>
         </div>
-      </div>
-      <nav class="topnav">
-        <a href="#about">
-          <span class="navText">ABOUT</span>
-          <span class="redLine">
-            <div class="nav-btn-hidden"></div>
-          </span>
-        </a>
-        <a href="#education">
-          <span>EDUCATION</span>
-          <span class="redLine">
-            <div class="nav-btn-hidden"></div>
-          </span>
-        </a>
-        <a href="#experience">
-          <span>EXPERIENCE</span>
-          <span class="redLine">
-            <div class="nav-btn-hidden"></div>
-          </span>
-        </a>
-        <a href="#work">
-          <span>WORK</span>
-          <span class="redLine">
-            <div class="nav-btn-hidden"></div>
-          </span>
-        </a>
-        <a href="#contact">
-          <span>CONTACT</span>
-          <span class="redLine">
-            <div class="nav-btn-hidden"></div>
-          </span>
-        </a>
-      </nav>
-    </header>
-    <main>
-      <div id="about">
-        <h2>ABOUT ME</h2>
-        <p>I am a digital designer living in Canberra. Currently I am looking for a position in the arear of video, animation or graphic design. To show how much I am capable of doing, nothing is more intuitive than a showreel. And here I got one for you.</p>
-      </div>
-      <div id="education">
-        <h2>EDUCATION</h2>
-        <h3>Bachelor of Media Arts (Honours) / 2013 - 2017</h3>
-        <h3>University of New Sales Wales, College of Art & Design</h3>
-        <p>Specialisation: Animation and Visual Effects, Digital Media. <br>Date of Completion: 11 July 2017.</p>
-      </div>
-      <div id="experience">
-        <h2>WORK EXPERIENCE</h2>
-        <!-- job 1 -->
-        <div>
-          <h3>Media Assistant & Video Producer / 2016 - 2018</h3>
-          <h3>University of New Sales Wales Faculty of Law</h3>
-          <p>Shoot and edit video, create online learning module under advice from professors. In the department of Continuing Legal Education, record and edit videos for seminars take place in Sydney.</p>
+        <nav class="topnav">
+          <a href="#about">
+            <span class="navText">ABOUT</span>
+            <span class="redLine">
+              <div class="nav-btn-hidden"></div>
+            </span>
+          </a>
+          <a href="#education">
+            <span>EDUCATION</span>
+            <span class="redLine">
+              <div class="nav-btn-hidden"></div>
+            </span>
+          </a>
+          <a href="#experience">
+            <span>EXPERIENCE</span>
+            <span class="redLine">
+              <div class="nav-btn-hidden"></div>
+            </span>
+          </a>
+          <a href="#work">
+            <span>WORK</span>
+            <span class="redLine">
+              <div class="nav-btn-hidden"></div>
+            </span>
+          </a>
+          <a href="#contact">
+            <span>CONTACT</span>
+            <span class="redLine">
+              <div class="nav-btn-hidden"></div>
+            </span>
+          </a>
+        </nav>
+      </header>
+      <main>
+        <div id="about">
+          <h2>ABOUT ME</h2>
+          <p>I am a digital designer living in Canberra. Currently I am looking for a position in the arear of video, animation or graphic design. To show how much I am capable of doing, nothing is more intuitive than a showreel. And here I got one for you.</p>
         </div>
-        <!-- job 2 -->
-        <div>
-          <h3>Video Producer / 2017</h3>
-          <h3>Koala Entertainment</h3>
-          <p>Produce promotional videos, make insctuction animations of the company's main product: mini karaoke machines.</p>
+        <div id="education">
+          <h2>EDUCATION</h2>
+          <h3>Bachelor of Media Arts (Honours) / 2013 - 2017</h3>
+          <h3>University of New Sales Wales, College of Art & Design</h3>
+          <p>Specialisation: Animation and Visual Effects, Digital Media. <br>Date of Completion: 11 July 2017.</p>
         </div>
-        <!-- job 3 -->
-        <div>
-          <h3>Video Editor & Graphic Designer / 2018</h3>
-          <h3>Sue Grace Media</h3>
-          <p>Edit videos for the company's entertainment programs, boardcast live event and make visual designs for posters.</p>
+        <div id="experience">
+          <h2>WORK EXPERIENCE</h2>
+          <!-- job 1 -->
+          <div>
+            <h3>Media Assistant & Video Producer / 2016 - 2018</h3>
+            <h3>University of New Sales Wales Faculty of Law</h3>
+            <p>Shoot and edit video, create online learning module under advice from professors. In the department of Continuing Legal Education, record and edit videos for seminars take place in Sydney.</p>
+          </div>
+          <!-- job 2 -->
+          <div>
+            <h3>Video Producer / 2017</h3>
+            <h3>Koala Entertainment</h3>
+            <p>Produce promotional videos, make insctuction animations of the company's main product: mini karaoke machines.</p>
+          </div>
+          <!-- job 3 -->
+          <div>
+            <h3>Video Editor & Graphic Designer / 2018</h3>
+            <h3>Sue Grace Media</h3>
+            <p>Edit videos for the company's entertainment programs, boardcast live event and make visual designs for posters.</p>
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
 
-    <footer></footer>
-
+      <footer></footer>
+    </div>
   </body>
 </html>
