--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Dosis|Libre+Franklin|Nanum+Gothic" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <script src="navigation.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/extra.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <script src="javascript/extra.js" defer></script>
     <title>Shen's online resume</title>
   </head>
   <body>
@@ -24,69 +27,236 @@
           <a href="#about">
             <span class="navText">ABOUT</span>
             <span class="redLine">
-              <div class="nav-btn-hidden"></div>
-            </span>
-          </a>
-          <a href="#education">
-            <span>EDUCATION</span>
-            <span class="redLine">
-              <div class="nav-btn-hidden"></div>
-            </span>
-          </a>
-          <a href="#experience">
-            <span>EXPERIENCE</span>
-            <span class="redLine">
-              <div class="nav-btn-hidden"></div>
+              <div></div>
             </span>
           </a>
           <a href="#work">
             <span>WORK</span>
             <span class="redLine">
-              <div class="nav-btn-hidden"></div>
+              <div></div>
+            </span>
+          </a>
+          <a href="#education">
+            <span>EDUCATION</span>
+            <span class="redLine">
+              <div></div>
+            </span>
+          </a>
+          <a href="#experience">
+            <span>EXPERIENCE</span>
+            <span class="redLine">
+              <div></div>
+            </span>
+          </a>
+          <a href="#skill">
+            <span>SKILL</span>
+            <span class="redLine">
+              <div></div>
             </span>
           </a>
           <a href="#contact">
             <span>CONTACT</span>
             <span class="redLine">
-              <div class="nav-btn-hidden"></div>
+              <div></div>
             </span>
           </a>
         </nav>
       </header>
       <main>
         <div id="about">
-          <h2>ABOUT ME</h2>
-          <p>I am a digital designer living in Canberra. Currently I am looking for a position in the arear of video, animation or graphic design. To show how much I am capable of doing, nothing is more intuitive than a showreel. And here I got one for you.</p>
+          <img src="images/profile.jpg" alt="shen tianhao">
+          <div class="text-warpper">
+            <h2>ABOUT ME</h2>
+            <div class="underline"></div>
+            <p>Hi there, welcome to my personal online CV site. I am a Chinese digital designer living in Canberra. Currently I am looking for a position in the area of video, animation or graphic design. <br>To show what kind of work I am capable of doing, nothing is more intuitive than a showreel. And here I got one for you.</p>
+          </div>
+        </div>
+        <div id="showreel">
+          <iframe class="showreel" src="https://www.youtube.com/embed/_gSM_V9AE2A?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div id="work">
+          <div class="text-warpper">
+            <h2>WORK</h2>
+            <div class="underline"></div>
+          </div>
+          <div class="thegrid">
+            <div class="box01">
+              <div class="box">
+                <img src="images/lb-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>LONLIEST BABY</h3>
+                    <h4>Duration: 2 min 2 sec</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+            <div class="box02">
+              <div class="box">
+                <img src="images/sk-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>SAKUGA KINETYPE</h3>
+                    <h4>Duration: 50 sec</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+            <div class="box03">
+              <div class="box">
+                <img src="images/cb-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>CAN YOU FIND THE SLEEPING BIRD</h3>
+                    <h4>Duration: 44 sec</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+            <div class="box04">
+              <div class="box">
+                <img src="images/pp-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>PRESIDENTIAL PLANE</h3>
+                    <h4>Duration: 1 min 29 sec</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+            <div class="box05">
+              <div class="box">
+                <img src="images/tf-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>THE FOREST</h3>
+                    <h4>Duration: 1 min 6 sec</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+            <div class="box06">
+              <div class="box">
+                <img src="images/ic-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>IF LIFE CAN CTRL-Z</h3>
+                    <h4>Duration: 3 min 44 sec</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+            <div class="box07">
+              <div class="box">
+                <img src="images/tf2-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>TORN FURTURE</h3>
+                    <h4>Duration: 6 min</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+            <div class="box08">
+              <div class="box">
+                <img src="images/dl-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>AZURLANE x DRAGONLADY</h3>
+                    <h4>Duration: 1 min 31 sec</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+            <div class="box09">
+              <div class="box">
+                <img src="images/bs-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>BUS SHELTER</h3>
+                    <h4>Duration: 5 min 31 sec</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+            <div class="box10">
+              <div class="box">
+                <img src="images/kl-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>KOALA COMMERCIAL</h3>
+                    <h4>Duration: 1 min</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+            <div class="box11">
+              <div class="box">
+                <img src="images/ga-cover.png">
+                <div class="overlay">
+                  <div class="gridtext">
+                    <h3>GIRL'S ARMY</h3>
+                    <h4>Duration: 2 min 59sec</h4>
+                  </div>
+                  <i class="far fa-play-circle"></i>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div id="education">
-          <h2>EDUCATION</h2>
-          <h3>Bachelor of Media Arts (Honours) / 2013 - 2017</h3>
-          <h3>University of New Sales Wales, College of Art & Design</h3>
-          <p>Specialisation: Animation and Visual Effects, Digital Media. <br>Date of Completion: 11 July 2017.</p>
+          <div class="title-warpper">
+            <h2>EDUCATION</h2>
+            <div class="underline"></div>
+            <h3>Bachelor of Media Arts (Honours) / 2013 - 2017</h3>
+            <h4>University of New Sales Wales, College of Art & Design</h3>
+          </div>
+          <div class="text-warpper">
+            <p>Specialisation: Animation and Visual Effects, Digital Media. <br>Date of Completion: 11 July 2017.</p>
+          </div>
         </div>
         <div id="experience">
-          <h2>WORK EXPERIENCE</h2>
-          <!-- job 1 -->
-          <div>
-            <h3>Media Assistant & Video Producer / 2016 - 2018</h3>
-            <h3>University of New Sales Wales Faculty of Law</h3>
-            <p>Shoot and edit video, create online learning module under advice from professors. In the department of Continuing Legal Education, record and edit videos for seminars take place in Sydney.</p>
+          <div class="experience-warpper">
+            <div class="title-warpper">
+              <h2>EXPERIENCE</h2>
+              <div class="underline"></div>
+              <h3>Media Assistant & Video Producer / 2016 - 2018</h3>
+              <h4>University of New Sales Wales Faculty of Law</h3>
+            </div>
+            <div class="text-warpper">
+              <p>Shoot and edit video, create online learning module under advice from professors. In the department of Continuing Legal Education, record and edit videos for seminars take place in Sydney.</p>
+            </div>
           </div>
-          <!-- job 2 -->
-          <div>
-            <h3>Video Producer / 2017</h3>
-            <h3>Koala Entertainment</h3>
-            <p>Produce promotional videos, make insctuction animations of the company's main product: mini karaoke machines.</p>
+          <div class="experience-warpper">
+            <div class="title-warpper">
+              <h3>Video Producer / 2017</h3>
+              <h4>Koala Entertainment</h4>
+            </div>
+            <div class="text-warpper">
+              <p>Produce promotional videos, make insctuction animations of the company's main product: mini karaoke machines.</p>
+            </div>
           </div>
-          <!-- job 3 -->
-          <div>
-            <h3>Video Editor & Graphic Designer / 2018</h3>
-            <h3>Sue Grace Media</h3>
-            <p>Edit videos for the company's entertainment programs, boardcast live event and make visual designs for posters.</p>
+          <div class="experience-warpper">
+            <div class="title-warpper">
+              <h3>Video Editor & Graphic Designer / 2018</h3>
+              <h4>Sue Grace Media</h4>
+            </div>
+            <div class="text-warpper">
+              <p>Edit videos for the company's entertainment programs, boardcast live event and make visual designs for posters.</p>
+            </div>
           </div>
         </div>
       </main>
-
       <footer></footer>
     </div>
   </body>
