--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
     <div class="site-wrapper">
       <header>
         <div class="promo">
-          <video id="v1" poster="images/bgcover-2.jpg" loop>
+          <video id="v1" poster="images/bgcover-2.jpg" autoplay loop>
             <source src="videos/bgvideo-2.mp4" type="video/mp4">
           </video>
-          <script>
-            document.querySelector('#v1').play();
-          </script>
           <div class="nameAndpos">
             <h1>Shen Tianhao</h1>
             <h2>Digital Designer & Video Editor</h2>
