--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="site-wrapper">
       <header>
         <div class="promo">
-          <video id="v1" poster="images/bgcover-2.jpg" autoplay loop>
+          <video id="v1" poster="images/bgcover-2.jpg" autoplay muted loop>
             <source src="videos/bgvideo-2.mp4" type="video/mp4">
           </video>
           <div class="nameAndpos">
