--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/extra.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <script src="javascript/extra.js" defer></script>
+    <script src="javascript/mobileCheck.js" defer></script>
     <title>Shen's online resume</title>
   </head>
   <body>
@@ -225,7 +226,7 @@
             <p>Specialisation: Animation and Visual Effects, Digital Media. <br>Date of Completion: 11 July 2017.</p>
           </div>
         </div>
-        <div id="experience">
+        <div id="experience" class="desktop">
           <div class="experience-warpper">
             <div class="title-warpper">
               <h2>EXPERIENCE</h2>
