change layout, navbar style, bgvideo

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <div class="site-wrapper">
       <header>
         <div class="promo">
-          <video id="v1" poster="images/bgcover-2.jpg" autoplay muted loop>
-            <source src="videos/bgvideo-2.mp4" type="video/mp4">
+          <div class="videoOverlay"></div>
+          <video poster="images/bgcover.jpg" autoplay muted loop>
+            <source src="videos/bgvideo.mp4" type="video/mp4">
           </video>
+
           <div class="nameAndpos">
             <h1>Shen Tianhao</h1>
             <h2>Digital Designer & Video Editor</h2>
@@ -226,7 +228,7 @@
             <p>Specialisation: Animation and Visual Effects, Digital Media. <br>Date of Completion: 11 July 2017.</p>
           </div>
         </div>
-        <div id="experience" class="desktop">
+        <div id="experience" class="desktopEXP">
           <div class="experience-warpper">
             <div class="title-warpper">
               <h2>EXPERIENCE</h2>
